--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:width="64dp"
+    android:height="64dp"
+    android:viewportWidth="64"
+    android:viewportHeight="64">
+
+        <path
+            android:fillColor="#4F5D73"
+            android:pathData="M32,16c9.9,0,18,8.1,18,18s-8.1,18-18,18s-18-8.1-18-18S22.1,16,32,16z M32,12c-12.2,0-22,9.8-22,22    s9.8,22,22,22s22-9.8,22-22S44.2,12,32,12L32,12z"/>
+
+        <path
+            android:fillColor="#C75C5C"
+            android:pathData="M32,14c9.9,0,18,8.1,18,18s-8.1,18-18,18s-18-8.1-18-18S22.1,14,32,14 M32,10c-12.2,0-22,9.8-22,22    s9.8,22,22,22s22-9.8,22-22S44.2,10,32,10L32,10z"/>
+
+            <path android:fillColor="#4F5D73" android:pathData="M40,44c-0.5,0-1-0.2-1.4-0.6L30,34.8V26c0-1.1,0.9-2,2-2s2,0.9,2,2v7.2l7.4,7.4c0.8,0.8,0.8,2,0,2.8     C41,43.8,40.5,44,40,44z"/>
+
+        <path
+            android:fillColor="#231F20"
+            android:pathData="M40,42c-0.5,0-1-0.2-1.4-0.6L30,32.8V24c0-1.1,0.9-2,2-2s2,0.9,2,2v7.2l7.4,7.4c0.8,0.8,0.8,2,0,2.8    C41,41.8,40.5,42,40,42z"/>
 </vector>
