--- a/app/src/main/res/layout/activity_time_checker.xml
+++ b/app/src/main/res/layout/activity_time_checker.xml
@@ -15,82 +15,71 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/black_overlay">
 
-        <TextView
-            android:id="@+id/morningStartTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="@string/morning_start_content"
-            android:inputType="time" />
 
         <Button
             android:id="@+id/morningStartButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="7:00"
+            android:text="@string/morning_start_content"
             android:onClick="clickTimePicker"
-            android:tag="morningStartButton" />
-
-        <TextView
-            android:id="@+id/morningEndTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="@string/morning_end_content"
-            android:inputType="time" />
+            android:tag="morningStartButton"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark"
+            />
 
         <Button
             android:id="@+id/morningEndButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="7:00"
+            android:text="@string/morning_end_content"
             android:onClick="clickTimePicker"
-            android:tag="morningEndButton" />
-
-        <TextView
-            android:id="@+id/morningDuration"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="--"
-            android:inputType="time" />
-
-        <TextView
-            android:id="@+id/afternoonStartTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="@string/afternoon_start_content"
-            android:inputType="time" />
+            android:tag="morningEndButton"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark" />
 
         <Button
             android:id="@+id/afternoonStartButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="7:00"
+            android:text="@string/afternoon_start_content"
             android:onClick="clickTimePicker"
-            android:tag="afternoonStartButton" />
+            android:tag="afternoonStartButton"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark" />
+
+
+        <TextView
+            android:id="@+id/morningDuration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="20"
+            android:text="@string/defaultText"
+            android:textColor="@color/colorPrimaryDark"
+            android:textAlignment="center"/>
 
         <TextView
             android:id="@+id/lunchDuration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="--"
-            android:inputType="time" />
+            android:ems="20"
+            android:text="@string/defaultText"
+            android:textColor="@color/colorPrimaryDark"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/afternoonEndTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="--"
-            android:inputType="time" />
+            android:ems="20"
+            android:text="@string/defaultText"
+            android:textColor="@color/colorPrimaryDark"
+            android:textAlignment="center"/>
 
     </LinearLayout>
 
