--- a/app/src/main/res/layout/activity_time_checker.xml
+++ b/app/src/main/res/layout/activity_time_checker.xml
@@ -23,63 +23,76 @@
             android:id="@+id/morningStartButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.12"
             android:layout_margin="16dp"
             android:text="@string/morning_start_content_base"
             android:onClick="clickTimePicker"
             android:tag="morningStartButton"
             android:background="@color/colorPrimary"
             android:textColor="@color/colorPrimaryDark"
+            android:textSize="25sp"
             />
 
         <Button
             android:id="@+id/morningEndButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.12"
             android:layout_margin="16dp"
             android:text="@string/morning_end_content_base"
             android:onClick="clickTimePicker"
             android:tag="morningEndButton"
             android:background="@color/colorPrimary"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="25sp" />
 
         <Button
             android:id="@+id/afternoonStartButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.12"
             android:layout_margin="16dp"
             android:text="@string/afternoon_start_content_base"
             android:onClick="clickTimePicker"
             android:tag="afternoonStartButton"
             android:background="@color/colorPrimary"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="25sp" />
 
 
         <TextView
             android:id="@+id/morningDuration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.15"
             android:ems="20"
             android:text="@string/defaultText"
             android:textColor="@color/colorPrimaryDark"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:textSize="30sp"/>
 
         <TextView
             android:id="@+id/lunchDuration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.15"
             android:ems="20"
             android:text="@string/defaultText"
             android:textColor="@color/colorPrimaryDark"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/afternoonEndTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.15"
             android:ems="20"
             android:text="@string/defaultText"
             android:textColor="@color/colorPrimaryDark"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:textSize="30sp"
+            />
 
     </LinearLayout>
 
