--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#555555</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#1F1B24</color>
+    <color name="colorPrimaryDark">#BB86FC</color>
+    <color name="colorAccent">#3700B3</color>
 
-    <color name="black_overlay">#66000000</color>
+    <color name="black_overlay">#1F1B24</color>
 </resources>
